--- a/releasenotes.txt
+++ b/releasenotes.txt
@@ -1,3 +1,6 @@
+v0.9.1
+-Code comment, code clean, security enhancements and bug fixes
+
 v0.9.0
 - Fixed /umlrs/statements on login giving error. (using string conversion as dict was being returned)
 - Updated ADL_LRS fix for /statemetns/ 
