--- a/releasenotes.txt
+++ b/releasenotes.txt
@@ -1,3 +1,7 @@
+v0.9.3
+- Updated blocks view to show updated date instead of published date.
+- Fixed statement assignment to courses and blocks for multiple consecutive launched statements.
+
 v0.9.2
 - Fixed bugs
 - Fixed API to match with eXe elp id scan in latest eXe build
