--- a/releasenotes.txt
+++ b/releasenotes.txt
@@ -1,6 +1,7 @@
 v0.9.6
 - Fixed UMCloudDj issue #1 on spaces in usernames: https://github.com/UstadMobile/UMCloudDj-Code/issues/1
 - Fixed issue #1
+- Fixed issue #2 https://github.com/UstadMobile/UMCloudDj-Code/issues/2
 
 
 v0.9.5
