--- a/releasenotes.txt
+++ b/releasenotes.txt
@@ -1,3 +1,6 @@
+v0.9.91
+- Updated deployment script to set up the server to run under wsgi and apache2
+
 v0.9.8
 - Updated CourseForm to account for correct pick list values when submitting form as well as making other fields un-mandatory. Fixes issue #4 https://github.com/UstadMobile/UMCloudDj-Code/issues/4
 - Disabled link in picklist. Fixes enhancement issue #5 https://github.com/UstadMobile/UMCloudDj-Code/issues/5
