--- a/releasenotes.txt
+++ b/releasenotes.txt
@@ -1,3 +1,6 @@
+v0.9.94
+- Fixes to Registration report and formatting.
+
 v0.9.93
 - Fix for issue #10: https://github.com/UstadMobile/UMCloudDj-Code/issues/10
 - Fix for issue #6: https://github.com/UstadMobile/UMCloudDj-Code/issues/6
