--- a/releasenotes.txt
+++ b/releasenotes.txt
@@ -1,3 +1,7 @@
+v0.9.97
+- Added universal basic http authentication for all opds requests and not using Django's authentication based on cookies.
+  This will help make requests that are cookie independent and easier on the app side. 
+
 v0.9.96
 - Fixed issue #12 : https://github.com/UstadMobile/UMCloudDj-Code/issues/12
   Issue was Django forms needed to be stated which fields were mandatory or not in the forms.
