--- a/releasenotes.txt
+++ b/releasenotes.txt
@@ -1,3 +1,8 @@
+v0.9.997
+- Added micro edition 320x240 epub versions to epub uploads 
+- Changed models to account for that
+- Added opds link as well
+
 v0.9.993
 -Removed duplicate entries in assigned courses of opds api
 -Added correct epub mapping. 
