--- a/releasenotes.txt
+++ b/releasenotes.txt
@@ -1,3 +1,6 @@
+v1.1.600
+-Fixed block update which was successfully updating the block but wasn't updating the acquisition link entry so it made the opds acquisition links logic output the old epub file
+
 v1.1.550
 -Holiday Calendar across organisations.
 -Reflected the above through Schools and Classes
