--- a/releasenotes.txt
+++ b/releasenotes.txt
@@ -1,3 +1,6 @@
+v1.1.690
+- Fix Survey report to show Text as well.
+
 v1.1.680
 - Updates to Survey report to show score as well as response filled in.
 
