--- a/releasenotes.txt
+++ b/releasenotes.txt
@@ -1,3 +1,6 @@
+v1.3.100
+-Updated Password Reset API to be Password Reset API. Takes in username as POST parameter arguments and sends corresponding email.
+
 v1.3.000
 -Added Password Reset API
 -Attendance Online capability
