--- a/releasenotes.txt
+++ b/releasenotes.txt
@@ -1,3 +1,7 @@
+v1.4.000
+-Added cover and thumbnails to courses and blocks
+-Batch add students API and script
+
 v1.3.100
 -Updated Password Reset API to be Password Reset API. Takes in username as POST parameter arguments and sends corresponding email.
 
