--- a/releasenotes.txt
+++ b/releasenotes.txt
@@ -1,3 +1,8 @@
+v1.4.200
+-Made opds work better with host for different host names set in settings.py
+-Alphabetical order for courses with pagination support
+-Update course and block cover and thumbnails
+
 v1.4.000
 -Added cover and thumbnails to courses and blocks
 -Batch add students API and script
